chore: proxy-config 초기화 및 gitignore 업데이트

--- a/proxy-config.json
+++ b/proxy-config.json
@@ -1,10 +1,4 @@
 {
-  "target": "https://new.querypie.com",
-  "recent": [
-    "https://new.querypie.com",
-    "https://test",
-    "https://internal.dev.querypie.io",
-    "https://develop.dev.querypie.io",
-    "https://nightly.dev.querypie.io"
-  ]
+  "target": "",
+  "recent": []
 }
